[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procedural-track-gen"
version = "0.1.0"
description = "Curriculum-based procedural track generation for RL agent training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0",
    "matplotlib",
    "scipy",
]